--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,8 @@
-
+<html>
+  <head>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="flex flex-row justify-center items-center min-h-screen">
+    gabriel
+  </body>
+</html>
